# nyc-311-service-requests-lakehouse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: dev.example.yaml  dev.yaml  prod.yaml
config/schemas/: bronze_schema.json  gold_schema.json  silver_schema.json
databricks/sql/: analytics_queries.sql  dq_queries.sql  performance_queries.sql
docs/architecture/: architecture-diagram.md  data-flow.md  medallion-design.md
docs/data-dictionary/: bronze.md  gold.md  silver.md
docs/runbooks/: backfill-runbook.md  pipeline-runbook.md  troubleshooting.md
docs/screenshots/: README.md
infra/adf/: datasets.json  linked_services.json  pipeline_nyc311_ingest.json  triggers.json
infra/azure/: resource-group-notes.md  storage-structure.md
infra/databricks/: cluster-config.json  secret-scope-notes.md  workflow-job.json
powerbi/: metrics-definition.md  nyc311_dashboard_mockup.md
sql/ddl/: bronze_tables.sql  gold_tables.sql  silver_tables.sql
sql/marts/: backlog_snapshot.sql  request_volume_daily.sql  service_performance.sql
sql/validation/: null_check_queries.sql  reconciliation_queries.sql
src/common/: config_loader.py  constants.py  databricks_runtime.py  logger.py  utils.py
src/ingestion/: api_extract.py  bronze_loader.py  watermark.py
src/quality/: duplicate_checks.py  null_checks.py  rowcount_checks.py  schema_checks.py
src/transformation/: gold_dimensions.py  gold_facts.py  gold_marts.py  silver_reference_tables.py  silver_service_requests.py
(+38 files in other folders)
