[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-311-service-requests-lakehouse"
version = "0.1.0"
description = "Scaffold-first Azure and Databricks lakehouse project for NYC 311 operational analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

